ExpressionImpl/src/main/java/com/snaplogic/grammars/SnapExpressionsParser.java
package com.snaplogic.grammars;// Generated from /Users/yliu/IdeaProjects/Snap-document/ExpressionImpl/src/main/antlr4/com/snaplogic/grammars/SnapExpressions.g4 by ANTLR 4.7

import com.snaplogic.expression.Regex;
import com.snaplogic.expression.util.LiteralUtils;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.math.BigDecimal;
import java.math.BigInteger;
import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SnapExpressionsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OctNumber=1, HexNumber=2, Float=3, Digit=4, FloatDigit=5, QuotedString=6, 
		NonTerminatedString=7, NonTerminatedDoubleString=8, MULTICOMMENT=9, NonTerminatedComment=10, 
		LINECOMMENT=11, Regex=12, Escape=13, EscapeSlash=14, OR=15, AND=16, XOR=17, 
		EQUALS=18, NOT_EQUALS=19, GT=20, LT=21, GTE=22, LTE=23, ADD=24, SUB=25, 
		MULTIPLY=26, DIVIDE=27, MOD=28, NOT=29, QMARK=30, COLON=31, INSTANCEOF=32, 
		TYPEOF=33, ARROW=34, ASSIGN=35, IN=36, LBRACKET=37, RBRACKET=38, LCURLY=39, 
		RCURLY=40, LPAREN=41, RPAREN=42, ELLIPSIS=43, COMMA=44, DOT=45, True=46, 
		False=47, New=48, Null=49, NaN=50, Infinity=51, OCT_PREFIX=52, HEX_PREFIX=53, 
		Id=54, IdStart=55, IdPart=56, PropertyRef=57, WS=58;
	public static final int
		RULE_eval = 0, RULE_exp = 1, RULE_logicalOr = 2, RULE_logicalAnd = 3, 
		RULE_logicalXor = 4, RULE_inOperator = 5, RULE_equality = 6, RULE_relational = 7, 
		RULE_addition = 8, RULE_multiplication = 9, RULE_unary = 10, RULE_atomicExp = 11, 
		RULE_property = 12, RULE_functionCall = 13, RULE_parens = 14, RULE_parensCall = 15, 
		RULE_memberSuffix = 16, RULE_indexSuffix = 17, RULE_propertyRef = 18, 
		RULE_method = 19, RULE_expOrSpread = 20, RULE_arguments = 21, RULE_atomic = 22, 
		RULE_array = 23, RULE_propertyNameAndValue = 24, RULE_propertyNameOrExpr = 25, 
		RULE_propertyNameExpr = 26, RULE_propertyName = 27, RULE_objliteral = 28, 
		RULE_integer = 29, RULE_fpnum = 30, RULE_qstring = 31, RULE_idstring = 32, 
		RULE_jsregex = 33, RULE_parameterWithDefault = 34, RULE_restParameters = 35, 
		RULE_coverParenthesisedExpressionAndArrowParameterList = 36, RULE_arrowParameters = 37, 
		RULE_conciseBody = 38, RULE_arrowFunction = 39;
	public static final String[] ruleNames = {
		"eval", "exp", "logicalOr", "logicalAnd", "logicalXor", "inOperator", 
		"equality", "relational", "addition", "multiplication", "unary", "atomicExp", 
		"property", "functionCall", "parens", "parensCall", "memberSuffix", "indexSuffix", 
		"propertyRef", "method", "expOrSpread", "arguments", "atomic", "array", 
		"propertyNameAndValue", "propertyNameOrExpr", "propertyNameExpr", "propertyName", 
		"objliteral", "integer", "fpnum", "qstring", "idstring", "jsregex", "parameterWithDefault", 
		"restParameters", "coverParenthesisedExpressionAndArrowParameterList", 
		"arrowParameters", "conciseBody", "arrowFunction"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "'\\/'", "'||'", "'&&'", "'^'", "'=='", "'!='", "'>'", "'<'", 
		"'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'?'", "':'", 
		"'instanceof'", "'typeof'", "'=>'", "'='", "'in'", "'['", "']'", "'{'", 
		"'}'", "'('", "')'", "'...'", "','", "'.'", "'true'", "'false'", "'new'", 
		"'null'", "'NaN'", "'Infinity'", "'0'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "OctNumber", "HexNumber", "Float", "Digit", "FloatDigit", "QuotedString", 
		"NonTerminatedString", "NonTerminatedDoubleString", "MULTICOMMENT", "NonTerminatedComment", 
		"LINECOMMENT", "Regex", "Escape", "EscapeSlash", "OR", "AND", "XOR", "EQUALS", 
		"NOT_EQUALS", "GT", "LT", "GTE", "LTE", "ADD", "SUB", "MULTIPLY", "DIVIDE", 
		"MOD", "NOT", "QMARK", "COLON", "INSTANCEOF", "TYPEOF", "ARROW", "ASSIGN", 
		"IN", "LBRACKET", "RBRACKET", "LCURLY", "RCURLY", "LPAREN", "RPAREN", 
		"ELLIPSIS", "COMMA", "DOT", "True", "False", "New", "Null", "NaN", "Infinity", 
		"OCT_PREFIX", "HEX_PREFIX", "Id", "IdStart", "IdPart", "PropertyRef", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SnapExpressions.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SnapExpressionsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EvalContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public EvalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).enterEval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).exitEval(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapExpressionsVisitor) return ((SnapExpressionsVisitor<? extends T>)visitor).visitEval(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EvalContext eval() throws RecognitionException {
		EvalContext _localctx = new EvalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_eval);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			exp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public List<LogicalOrContext> logicalOr() {
			return getRuleContexts(LogicalOrContext.class);
		}
		public LogicalOrContext logicalOr(int i) {
			return getRuleContext(LogicalOrContext.class,i);
		}
		public TerminalNode QMARK() { return getToken(SnapExpressionsParser.QMARK, 0); }
		public TerminalNode COLON() { return getToken(SnapExpressionsParser.COLON, 0); }
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).exitExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapExpressionsVisitor) return ((SnapExpressionsVisitor<? extends T>)visitor).visitExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		ExpContext _localctx = new ExpContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			logicalOr();
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(83);
				match(QMARK);
				setState(84);
				logicalOr();
				setState(85);
				match(COLON);
				setState(86);
				logicalOr();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalOrContext extends ParserRuleContext {
		public List<LogicalAndContext> logicalAnd() {
			return getRuleContexts(LogicalAndContext.class);
		}
		public LogicalAndContext logicalAnd(int i) {
			return getRuleContext(LogicalAndContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(SnapExpressionsParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(SnapExpressionsParser.OR, i);
		}
		public LogicalOrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalOr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).enterLogicalOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).exitLogicalOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapExpressionsVisitor) return ((SnapExpressionsVisitor<? extends T>)visitor).visitLogicalOr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicalOrContext logicalOr() throws RecognitionException {
		LogicalOrContext _localctx = new LogicalOrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_logicalOr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			logicalAnd();
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(91);
					match(OR);
					setState(92);
					logicalAnd();
					}
					}
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalAndContext extends ParserRuleContext {
		public List<LogicalXorContext> logicalXor() {
			return getRuleContexts(LogicalXorContext.class);
		}
		public LogicalXorContext logicalXor(int i) {
			return getRuleContext(LogicalXorContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(SnapExpressionsParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(SnapExpressionsParser.AND, i);
		}
		public LogicalAndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalAnd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).enterLogicalAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).exitLogicalAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapExpressionsVisitor) return ((SnapExpressionsVisitor<? extends T>)visitor).visitLogicalAnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicalAndContext logicalAnd() throws RecognitionException {
		LogicalAndContext _localctx = new LogicalAndContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_logicalAnd);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			logicalXor();
			setState(103);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(99);
					match(AND);
					setState(100);
					logicalXor();
					}
					}
				}
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalXorContext extends ParserRuleContext {
		public List<InOperatorContext> inOperator() {
			return getRuleContexts(InOperatorContext.class);
		}
		public InOperatorContext inOperator(int i) {
			return getRuleContext(InOperatorContext.class,i);
		}
		public List<TerminalNode> XOR() { return getTokens(SnapExpressionsParser.XOR); }
		public TerminalNode XOR(int i) {
			return getToken(SnapExpressionsParser.XOR, i);
		}
		public LogicalXorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalXor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).enterLogicalXor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).exitLogicalXor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapExpressionsVisitor) return ((SnapExpressionsVisitor<? extends T>)visitor).visitLogicalXor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicalXorContext logicalXor() throws RecognitionException {
		LogicalXorContext _localctx = new LogicalXorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_logicalXor);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			inOperator();
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(107);
					match(XOR);
					setState(108);
					inOperator();
					}
					}
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InOperatorContext extends ParserRuleContext {
		public List<EqualityContext> equality() {
			return getRuleContexts(EqualityContext.class);
		}
		public EqualityContext equality(int i) {
			return getRuleContext(EqualityContext.class,i);
		}
		public List<TerminalNode> IN() { return getTokens(SnapExpressionsParser.IN); }
		public TerminalNode IN(int i) {
			return getToken(SnapExpressionsParser.IN, i);
		}
		public InOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).enterInOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).exitInOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapExpressionsVisitor) return ((SnapExpressionsVisitor<? extends T>)visitor).visitInOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InOperatorContext inOperator() throws RecognitionException {
		InOperatorContext _localctx = new InOperatorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_inOperator);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			equality();
			setState(119);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(115);
					match(IN);
					setState(116);
					equality();
					}
					}
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqualityContext extends ParserRuleContext {
		public Token op;
		public List<RelationalContext> relational() {
			return getRuleContexts(RelationalContext.class);
		}
		public RelationalContext relational(int i) {
			return getRuleContext(RelationalContext.class,i);
		}
		public List<TerminalNode> EQUALS() { return getTokens(SnapExpressionsParser.EQUALS); }
		public TerminalNode EQUALS(int i) {
			return getToken(SnapExpressionsParser.EQUALS, i);
		}
		public List<TerminalNode> NOT_EQUALS() { return getTokens(SnapExpressionsParser.NOT_EQUALS); }
		public TerminalNode NOT_EQUALS(int i) {
			return getToken(SnapExpressionsParser.NOT_EQUALS, i);
		}
		public EqualityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equality; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).enterEquality(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).exitEquality(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapExpressionsVisitor) return ((SnapExpressionsVisitor<? extends T>)visitor).visitEquality(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqualityContext equality() throws RecognitionException {
		EqualityContext _localctx = new EqualityContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_equality);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			relational();
			setState(127);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(123);
					((EqualityContext)_localctx).op = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==EQUALS || _la==NOT_EQUALS) ) {
						((EqualityContext)_localctx).op = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(124);
					relational();
					}
					}
				}
				setState(129);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationalContext extends ParserRuleContext {
		public Token op;
		public List<AdditionContext> addition() {
			return getRuleContexts(AdditionContext.class);
		}
		public AdditionContext addition(int i) {
			return getRuleContext(AdditionContext.class,i);
		}
		public List<TerminalNode> GT() { return getTokens(SnapExpressionsParser.GT); }
		public TerminalNode GT(int i) {
			return getToken(SnapExpressionsParser.GT, i);
		}
		public List<TerminalNode> LT() { return getTokens(SnapExpressionsParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(SnapExpressionsParser.LT, i);
		}
		public List<TerminalNode> GTE() { return getTokens(SnapExpressionsParser.GTE); }
		public TerminalNode GTE(int i) {
			return getToken(SnapExpressionsParser.GTE, i);
		}
		public List<TerminalNode> LTE() { return getTokens(SnapExpressionsParser.LTE); }
		public TerminalNode LTE(int i) {
			return getToken(SnapExpressionsParser.LTE, i);
		}
		public List<TerminalNode> INSTANCEOF() { return getTokens(SnapExpressionsParser.INSTANCEOF); }
		public TerminalNode INSTANCEOF(int i) {
			return getToken(SnapExpressionsParser.INSTANCEOF, i);
		}
		public RelationalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relational; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).enterRelational(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapExpressionsListener) ((SnapExpressionsListener)listener).exitRelational(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnapExpressionsVisitor) return ((SnapExpressionsVisitor<? extends T>)visitor).visitRelational(this);
			else return visitor.visitChildren(this);
		}
	}
